k8s/client-cluster-ip-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: client
    ports:
        - port: 80
          targetPort: 80
