k8s/node-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: node-counter-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: node-counter
    ports:
        - port: 5000
          targetPort: 5000
