k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: 'nginx'
        nginx.ingress.kubernetes.io/use-regex: 'true'
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 80
                  - path: /api/?(.*)
                    backend:
                        serviceName: api-cluster-ip-service
                        servicePort: 8080
                  - path: /nodeapi/?(.*)
                    backend:
                        serviceName: node-counter-cluster-ip-service
                        servicePort: 5000
